--- a/app/views/business.scala.html
+++ b/app/views/business.scala.html
@@ -9,9 +9,9 @@
  * argument is a `String` with the title of the page, the second
  * argument is an `Html` object containing the body of the page.
  *@
-@main("Home") {
+@main(pageName) {
 
-    @template.header(pageName)
+    @template.navbar(pageName)
     @template.about(pageName)
     @template.services(pageName)
     @template.callout(pageName)
