--- a/app/views/pages/business/index.scala.html
+++ b/app/views/pages/business/index.scala.html
@@ -12,10 +12,8 @@
 @main(pageName) {
 
     @template.navbar(pageName)
+    @callout(pageName)
     @template.about(pageName)
-    @template.services(pageName)
-    @template.callout(pageName)
-    @template.portfolio(pageName)
     @template.actions(pageName)
 
 }
