Updated background images

--- a/app/views/pages/forum/callout.scala.html
+++ b/app/views/pages/forum/callout.scala.html
@@ -4,8 +4,8 @@
 @(pageName: String)
 
 <!-- Callout -->
-<aside class="callout">
-    <div class="text-vertical-center">
+<aside class="forum-callout">
+    <div class="text-vertical-center text-muted">
         <h1>Forum | HelpSite Club</h1>
     </div>
 </aside>
