--- a/app/views/pages/hiring/callout.scala.html
+++ b/app/views/pages/hiring/callout.scala.html
@@ -4,7 +4,7 @@
 @(pageName: String)
 
 <!-- Callout -->
-<aside class="callout">
+<aside class="hiring-callout">
     <div class="text-vertical-center">
         <h1>Hiring | HelpSite Club</h1>
     </div>
