--- a/app/views/pages/knowledge/callout.scala.html
+++ b/app/views/pages/knowledge/callout.scala.html
@@ -4,8 +4,8 @@
 @(pageName: String)
 
 <!-- Callout -->
-<aside class="callout">
+<aside class="knowledge-callout">
     <div class="text-vertical-center">
-        <h1>Knowledge | HelpSite Club</h1>
+        <h1><span class="text-primary">Knowledge</span> | HelpSite Club</h1>
     </div>
 </aside>
