--- a/app/views/pages/business/callout.scala.html
+++ b/app/views/pages/business/callout.scala.html
@@ -4,7 +4,7 @@
 @(pageName: String)
 
 <!-- Callout -->
-<aside class="callout">
+<aside class="business-callout">
     <div class="text-vertical-center">
         <h1>Business | HelpSite Club</h1>
     </div>
