--- a/app/views/pages/home/sections/services.scala.html
+++ b/app/views/pages/home/sections/services.scala.html
@@ -31,7 +31,7 @@
 
             <div class="col-sm-3 item text-center scrollimation fade-left">
 
-                <div class="icon"><i class="fa fa-code"></i></div>
+                <div class="icon"><i class="fa fa-group"></i></div>
                 <h3>Consulting Services</h3>
                 <p>We help & support businesses to grow.</p>
 
@@ -59,15 +59,15 @@
                     <h4>Knowledge</h4>
                 </li>
                 <li>
-                    <p class="icon"><i class="fa fa-pencil fa-fw"></i></p>
+                    <p class="icon"><i class="fa fa-building fa-fw"></i></p>
                     <h4>Business</h4>
                 </li>
                 <li>
-                    <p class="icon"><i class="fa fa-code fa-fw"></i></p>
+                    <p class="icon"><i class="fa fa-briefcase fa-fw"></i></p>
                     <h4>Career</h4>
                 </li>
                 <li>
-                    <p class="icon"><i class="fa fa-cogs fa-fw"></i></p>
+                    <p class="icon"><i class="fa fa-pencil fa-fw"></i></p>
                     <h4>Forum</h4>
                 </li>
                 <li class="colored">
