Updated business template

--- a/app/views/pages/home/sections/header.scala.html
+++ b/app/views/pages/home/sections/header.scala.html
@@ -22,6 +22,7 @@
                 <li>
                     <h1>Business | HelpSite</h1>
                     <p>Complete solution and support for your business!</p>
+                    <p class="text-center"><a class="btn btn-qubico white" href="/business"><i class="fa fa-book"></i>Know More...</a></p>
                 </li>
                 <li>
                     <h1>Career | HelpSite</h1>
